--- a/server/server-app-project/src/main/resources/application.properties
+++ b/server/server-app-project/src/main/resources/application.properties
@@ -1,2 +1,5 @@
 spring.application.name=server-app-project
+jwt.secret=${JWT_SECRET}
+
+jwt.expiration-time=86400000 # Exemple : durée d'expiration en millisecondes
 
